[package]
name = "tauri-plugin-fs-extra"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "Tauri plugin that adds additional file system methods"
edition = "2018"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = "1.0.0-rc.14"
serde = "1.0"
thiserror = "1.0"
